feat(lottery): 添加双色球和值与AC值计算功能
- 新增计算红球和值（Sum Value）函数及接口
- 新增计算AC值（Arithmetic Complexity）函数及接口
- 在服务器中注册和值与AC值计算的MCP工具
- 添加和值与AC值结果的数据类型定义
- 更新package.json描述信息为"Double Color Ball Lottery MCP Server"
- 实现最近N期和值与AC值的统计分析功能
- 提供和值与AC值计算的输入参数校验逻辑
- 支持通过MCP协议调用和值与AC值计算服务

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lottery-mcp-server",
   "version": "1.0.0",
-  "description": "",
+  "description": "Double Color Ball Lottery MCP Server",
   "main": "index.js",
   "scripts": {
     "build": "tsc",
